# realmdreamer

./: .gitignore  .gitmodules  DOCKERFILE  README.md  finetune.sh  main.py  personalize.sh  render.sh  requirements.txt  run.sh  select_poses.sh  setup.sh
configs/: __init__.py  arcade.yaml  astronaut2.yaml  bathroom.yaml  bear.yaml  bedroom3.yaml  boat.yaml  bohemian.yaml  bust.yaml  car.yaml  castle.yaml  conference.yaml  default.py  eras.yaml  final_test_release.yaml  forest.yaml  gate.yaml  (+10 more)
realmdreamer/: pyproject.toml
realmdreamer/realmdreamer/: custom_dataparser.py  optimizers.py  sds_dataset.py
realmdreamer/realmdreamer/dummy/: dummy_config.py  dummy_datamanager.py  dummy_dataparser.py  dummy_dataset.py  dummy_pipeline.py  dummy_trainer.py  dummy_transforms.json  gs_model_render.py
realmdreamer/realmdreamer/gaussian_splatting/: gs_camera.py  gs_camera_utils.py  gs_config.py  gs_field.py  gs_model.py  gs_pipeline.py  gs_renderer.py  gs_sds_datamanager.py  gs_sh_utils.py  gs_trainer.py  gs_utils.py  mesh.py  mesh_utils.py  pcd_utils.py  sh_utils.py  transforms.py
realmdreamer/realmdreamer/gaussian_splatting/occlude/: README.md  find_occluded_voxels.h  occlude.cpp  occlude.pyx  setup.py
realmdreamer/realmdreamer/gaussian_splatting/simple-knn/: setup.py
realmdreamer/realmdreamer/guidance/: geowizard_guidance.py  marigold_guidance.py  sd_guidance.py  sd_inpainting_guidance.py
realmdreamer/utils/: bilateral_filter.py  depth.py  diffusers.py  image.py  line.py  mask.py  occ_grid.py  pcd.py  plotly_vis.py  pose.py  seed_everything.py  visualizer.py
(+51 files in other folders)
